tests/negative/test_type_annot_bin_bad.orb
fnc main() () {
    let (x:i32 0);
    (+ x 1):c8;
};